# millennium

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check-tools.yml  lint-and-format.yml  test-main.yml
docs/: docusaurus.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
docs/blog/: authors.yml
docs/docs/main/your-first-app/: prerequisites.mdx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/cxx/: Millennium.toml
examples/cxx/.millennium/: build.rs
examples/hello-world/: Millennium.toml
examples/vibrancy/: Millennium.toml  index.html
examples/vibrancy/src/: main.rs
src/millennium/: Cargo.toml  README.md  build.rs
src/millennium-api/: README.md  build.js  package.json  pnpm-lock.yaml
src/millennium-api/src/: _internal.ts  app.ts  cli.ts  clipboard.ts  dialog.ts  event.ts  fs.ts  globalShortcut.ts  http.ts  index.ts  millennium.ts  notification.ts  os.ts  path.ts  process.ts  shell.ts  updater.ts  window.ts
src/millennium-bindings-cxx/: Cargo.toml
src/millennium-build/: Cargo.toml  README.md
src/millennium-build/src/: default-manifest.xml  lib.rs  static_vcruntime.rs
src/millennium-build/src/codegen/: context.rs
src/millennium-codegen/: Cargo.toml  README.md
src/millennium-codegen/src/: context.rs  embedded_assets.rs  lib.rs
src/millennium-core/: Cargo.toml  README.md  build.rs
src/millennium-core-macros/: Cargo.toml  README.md
src/millennium-core-macros/src/: lib.rs
src/millennium-core/src/: accelerator.rs  dpi.rs  event.rs  event_loop.rs  global_shortcut.rs  icon.rs  keyboard.rs  lib.rs  menu.rs  system_tray.rs  window.rs
src/millennium-core/src/platform/: linux.rs  macos.rs  unix.rs  windows.rs
src/millennium-macros/: Cargo.toml  README.md
src/millennium-macros/src/: command_module.rs  context.rs
src/millennium-macros/src/command/: wrapper.rs
src/millennium-plugin-vibrancy/: Cargo.toml  README.md
src/millennium-plugin-vibrancy/src/: lib.rs  macos.rs  windows.rs
src/millennium-runtime/: Cargo.toml  README.md  build.rs
src/millennium-runtime-webview/: Cargo.toml  README.md
src/millennium-runtime-webview/src/: global_shortcut.rs  lib.rs  system_tray.rs
src/millennium-runtime/src/: lib.rs  menu.rs  webview.rs  window.rs
src/millennium-runtime/src/http/: mod.rs
src/millennium-utils/: Cargo.toml  README.md
src/millennium-utils/src/: assets.rs  config.rs  html.rs  lib.rs  mime_type.rs  platform.rs
src/millennium-utils/src/config/: parse.rs
src/millennium-webview/: Cargo.toml  README.md  build.rs
src/millennium-webview/src/: lib.rs
src/millennium-webview/src/http/: request.rs  response.rs
src/millennium-webview/src/webview/: mod.rs
src/millennium/scripts/: bundle.js  core.js
src/millennium/src/: app.rs  async_runtime.rs  command.rs  endpoints.rs  error.rs  event.rs  hooks.rs  lib.rs  manager.rs  pattern.rs  plugin.rs  state.rs  window.rs
src/millennium/src/api/: cli.rs  dialog.rs  dir.rs  file.rs  http.rs  ipc.rs  mod.rs  notification.rs  path.rs  process.rs  shell.rs  version.rs
src/millennium/src/app/: tray.rs
src/millennium/src/endpoints/: app.rs  cli.rs  dialog.rs  event.rs  file_system.rs  http.rs  operating_system.rs  process.rs  shell.rs  window.rs
src/millennium/src/scope/: fs.rs  http.rs  shell.rs
tools/: Cargo.toml
tools/config-schema/: Cargo.toml  build.rs  schema.json
tools/millennium-bundler/: Cargo.toml  README.md
tools/millennium-bundler/src/: bundle.rs
tools/millennium-bundler/src/bundle/: category.rs  common.rs  path_utils.rs  platform.rs  settings.rs  updater_bundle.rs
tools/millennium-bundler/src/bundle/linux/: debian.rs
tools/millennium-bundler/src/bundle/linux/templates/: appimage
tools/millennium-bundler/src/bundle/macos/: app.rs
tools/millennium-bundler/src/bundle/windows/: mod.rs  msi.rs  nsis.rs  sign.rs  util.rs
tools/millennium-bundler/src/bundle/windows/msi/: languages.json  wix.rs
tools/millennium-bundler/src/bundle/windows/templates/: install-task.ps1  installer.nsi  main.wxs  uninstall-task.ps1  update-task.xml
tools/millennium-cli/: Cargo.toml  README.md  build.rs  schema.json
tools/millennium-cli-node/: Cargo.toml  millennium.js  package.json  pnpm-lock.yaml
tools/millennium-cli-node/src/: lib.rs
tools/millennium-cli/src/: build.rs  dev.rs  icon.rs  info.rs  init.rs  lib.rs
tools/millennium-cli/src/helpers/: app_paths.rs  auto-reload.js  config.rs  icns.json  mod.rs  template.rs  updater_signature.rs  web_dev_server.rs
tools/millennium-cli/src/interface/: mod.rs  rust.rs
tools/millennium-cli/src/interface/rust/: cargo_config.rs  desktop.rs  manifest.rs
tools/millennium-cli/src/plugin/: init.rs
tools/millennium-cli/src/signer/: generate.rs  sign.rs
tools/millennium-cli/templates/: .millenniumrc
(+85 files in other folders)
