[package]
name = "millennium-core-macros"
description = "Macros for Millennium Core"
version = "1.0.0-beta.3"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui" ]
rust-version = "1.59"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
