[package]
name = "millennium-bundler"
description = "Wrap Rust executables in OS-specific app bundles for Millennium"
version = "1.0.0-beta.3"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "George Burton <burtonageo@gmail.com>", "Tauri Programme within The Commons Conservancy" ]
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]
rust-version = "1.59"
edition = "2021"
exclude = [
	"/target"
]

[dependencies]
millennium-utils = { version = "1.0.0-beta.3", path = "../../src/millennium-utils", features = [ "resources" ] }
image = "0.24"
libflate = "1.3"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
strsim = "0.10"
tar = "0.4"
toml = "0.7"
walkdir = "2"
handlebars = "4.2"
tempfile = "3.3"
log = { version = "0.4", features = [ "kv_unstable" ] }
dirs-next = "2.0"

[target."cfg(target_os = \"windows\")".dependencies]
attohttpc = "0.24"
uuid = { version = "1", features = [ "v4", "v5" ] }
bitness = "0.4"
winreg = "0.11"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
glob = "0.3"
zip = "0.6"
semver = "1"

[target."cfg(target_os = \"macos\")".dependencies]
icns = { package = "tauri-icns", version = "0.1" }
time = { version = "0.3", features = [ "formatting" ] }
plist = "1"

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
regex = "1"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.4"
ar = "0.9"
md5 = "0.7"

[lib]
name = "millennium_bundler"
path = "src/lib.rs"
