[package]
name = "millennium-cli"
description = "Command line interface for building Millennium apps"
version = "1.0.0-beta.3"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.59"
edition = "2021"
include = [
	"src/",
	"/templates",
	"scripts/",
	"*.json",
	"*.rs",
	"millennium.gitignore",
	"millennium-dev-watcher.gitignore"
]

[[bin]]
name = "cargo-millennium"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
anyhow = "1.0"
millennium-bundler = { version = "1.0.0-beta.3", path = "../millennium-bundler" }
colored = "2.0"
once_cell = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
notify = "5.0"
notify-debouncer-mini = "0.2"
shared_child = "1.0"
toml_edit = "0.13"
json-patch = "0.2"
millennium-utils = { version = "1.0.0-beta.3", path = "../../src/millennium-utils", features = [ "isolation", "schema" ] }
toml = "0.5"
jsonschema = "0.16"
handlebars = "4.2"
include_dir = "0.7"
minisign = "0.7"
base64 = "0.13.0"
ureq = "2.5"
os_info = "3.5"
semver = "1.0"
regex = "1.6.0"
unicode-width = "0.1"
zeroize = "1.5"
heck = "0.4"
url = { version = "2.3", features = [ "serde" ] }
os_pipe = "1"
ignore = "0.4"
ctrlc = "3.2"
inquire = "0.5"
phf = { version = "0.11", features = ["macros"] }
log = { version = "0.4.17", features = [ "kv_unstable", "kv_unstable_std" ] }
env_logger = "0.9.1"
icns = { package = "tauri-icns", version = "0.1" }
image = { version = "0.24", default-features = false, features = [ "ico" ] }
axum = { version = "0.5", features = [ "ws"] }
html5ever = "0.25"
kuchiki = "0.8"
tokio = { version = "1", features = [ "macros", "sync" ] }
common-path = "1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [ "handleapi", "processenv", "winbase", "wincon", "winnt" ] }

[target."cfg(unix)".dependencies]
libc = "0.2"
